[package]
authors = ["Olger Warnier <olger@spectare.nl>"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
]
description = "OIDC authentication extractor for Actix 4"
edition = "2021"
keywords = ["actix", "http", "web", "cryptography"]
license = "MIT"
name = "actix-4-jwt-auth"
repository = "https://github.com/digilectron/actix-4-jwt-auth"
version = "1.2.7"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls"]

rustls = ["actix-web/rustls", "awc/rustls"]
rustls-0_23 = ["tls-rustls-0_23", "actix-web/rustls-0_23", "awc/rustls-0_23"]
rustls-0_23-webpki-roots = ["tls-rustls-0_23", "actix-web/rustls-0_23", "awc/rustls-0_23-webpki-roots"]
rustls-0_23-native-roots = ["tls-rustls-0_23", "actix-web/rustls-0_23", "awc/rustls-0_23-native-roots"]

[dependencies]
actix-web = { package = "actix-web", version="4", optional = true }
biscuit = "0.8.0"
#biscuit = { path = "../biscuit/" }
futures = "0.3.31"
futures-core = {version = "0.3.31", default-features = false, features = ["alloc"]}
futures-util = {version = "0.3.31", default-features = false, features = ["alloc"]}
awc = { version="3.8.1", optional = true }
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
thiserror = "2.0.12"
tls-rustls-0_23 = { package = "rustls", version = "0.23", optional = true }

[dev-dependencies]
pretty_assertions= "1.4.1"
actix-rt = "2.10.0"
bytes = "1.10.1"
ring = "0.17.14"
num = "0.4"
